--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.16",
     "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "next": "12.3.3",
     "react": "18.2.0",
